<resources>
    <string name="app_name">SuEobMwoDeudJi</string>
    <string name="navi_home">홈</string>
    <string name="navi_time">시간표</string>
    <string name="navi_community">커뮤니티</string>
    <string name="navi_good">평가</string>
    <string name="navi_setting">설정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SettingsFragment -->
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- App Preferences -->


    <!-- Dialog -->
    <string-array name="profile">
        <item>"프로필 이미지 변경"</item>
        <item>"프로필 이미지 삭제"</item>
    </string-array>


</resources>