<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/navi_home"
        android:icon="@drawable/home"
        android:enabled="true" />
    <item
        android:id="@+id/navigation_time_table"
        android:title="@string/navi_time"
        android:icon="@drawable/time"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_community"
        android:title="@string/navi_community"
        android:icon="@drawable/community"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_ratings"
        android:title="@string/navi_good"
        android:icon="@drawable/ratings"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_settings"
        android:title="@string/navi_setting"
        android:icon="@drawable/settings"
        android:enabled="true"/>
</menu>